welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:15: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
  return getCouleurSol()
                      ^