welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  avance()
  if (getCouleurSol!=Color.green){
    recule()
    gauche()
    avance()
    if (getCouleurSol!=Color.green){
      recule()
      droite()
      droite()
      avance()
    }
  }
  return getCouleurSol()
}
  
